# qt_tutorials

./: build_all.bat  build_project.bat  readme.md
AnalogClock/: CMakeLists.txt  CMakePresets.json
AnalogClock/include/: analog_clock.hpp
AnalogClock/src/: analog_clock.cpp  main.cpp
Notepad/: CMakeLists.txt  CMakePresets.json
Notepad/include/: notepad.hpp
Notepad/src/: main.cpp  notepad.cpp
Template/: CMakeLists.txt
Template/include/: .gitkeep
Template/resources/: appicon.rc
Template/src/: main.cpp
